--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -172,7 +172,7 @@
 			<key>Generate</key>
 			<dict>
 				<key>PluginType</key>
-				<false/>
+				<true/>
 			</dict>
 			<key>NoOemTableId</key>
 			<false/>
@@ -453,8 +453,6 @@
 	<dict>
 		<key>InjectKexts</key>
 		<string>Detect</string>
-		<key>InjectSystemID</key>
-		<false/>
 	</dict>
 </dict>
 </plist>
