--- a/EFI/CLOVER/kexts/Other/USBPorts.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/USBPorts.kext/Contents/Info.plist
@@ -110,7 +110,7 @@
 						<key>DevSpeed</key>
 						<integer>2</integer>
 						<key>UsbConnector</key>
-						<integer>3</integer>
+						<integer>255</integer>
 						<key>port</key>
 						<data>
 						BwAAAA==
@@ -151,6 +151,8 @@
 					</dict>
 					<key>SS03</key>
 					<dict>
+						<key>DevSpeed</key>
+						<integer>3</integer>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
@@ -160,6 +162,8 @@
 					</dict>
 					<key>SS04</key>
 					<dict>
+						<key>DevSpeed</key>
+						<integer>3</integer>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
