--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -180,14 +180,14 @@
 	</dict>
 	<key>Boot</key>
 	<dict>
-		<key>CustomLogo</key>
-		<string>Apple</string>
 		<key>DefaultVolume</key>
 		<string>LastBootedVolume</string>
 		<key>Legacy</key>
-		<string>LegacyBiosDefault</string>
+		<string>PBR</string>
 		<key>Log</key>
 		<false/>
+		<key>NeverDoRecovery</key>
+		<true/>
 		<key>NeverHibernate</key>
 		<false/>
 		<key>NoEarlyProgress</key>
